namespace SubscriberSystem.Models
{
    public class Subscriber
    {
        public int SubscriptionNumber { get; set; }
        public string Name { get; set; }
        public string Address { get; set; }
        public string PhoneNumber { get; set; }
        public string PostalCode { get; set; }
        public string City { get; set; }
    }
}
